<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/more_actions">

        <Preference
            app:icon="@drawable/actions_ic_open_in_browser_24dp"
            app:key="open_online"
            app:title="@string/nav_online" />

        <Preference
            app:icon="@drawable/settings_ic_arrow_back_24dp"
            app:key="clear_shared"
            app:title="Clear shared" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/action_settings">

        <SwitchPreference
            app:disableDependentsState="true"
            app:icon="@drawable/settings_ic_invert_colors_24dp"
            app:key="dark_theme"
            app:title="@string/more_dark_theme"
            app:useSimpleSummaryProvider="true" />

        <com.ilya.scheduleapp.ui.ColorPickerPreference
            app:dependency="dark_theme"
            app:icon="@drawable/settings_ic_color_lens_24dp"
            app:key="primary_color"
            app:title="@string/settings_color_change" />

        <com.ilya.scheduleapp.ui.GroupPreference app:title="@string/more_group" />

        <com.ilya.scheduleapp.ui.UpdatePreference
            app:entries="@array/update_frequency"
            app:entryValues="@array/update_frequency_values"
            app:icon="@drawable/more_ic_update_24dp"
            app:key="schedule_update_frequency"
            app:title="@string/more_update_frequency" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
