<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/MoreHeaderTheme"
            android:text="Фичи" />

        <TextView
            android:id="@+id/more_open_online"
            style="@style/MoreTextViewTheme"
            android:drawableStart="@drawable/actions_ic_open_in_browser_24dp"
            android:drawableLeft="@drawable/actions_ic_open_in_browser_24dp"
            android:text="@string/nav_online" />

        <TextView
            style="@style/MoreHeaderTheme"
            android:text="@string/action_settings" />

        <TextView
            android:id="@+id/more_clear_shared"
            style="@style/MoreTextViewTheme"
            android:drawableStart="@drawable/settings_ic_arrow_back_24dp"
            android:drawableLeft="@drawable/settings_ic_arrow_back_24dp"
            android:text="Clear shared storage" />

        <TextView
            android:id="@+id/more_change_group"
            style="@style/MoreTextViewTheme"
            android:drawableStart="@drawable/more_ic_change_group_24dp"
            android:drawableLeft="@drawable/more_ic_change_group_24dp"
            android:text="@string/more_group" />

        <TextView
            android:id="@+id/more_change_week"
            style="@style/MoreTextViewTheme"
            android:drawableStart="@drawable/more_ic_view_week_24dp"
            android:drawableLeft="@drawable/more_ic_view_week_24dp"
            android:text="@string/more_study_week" />

        <TextView
            android:id="@+id/more_color_change"
            style="@style/MoreTextViewTheme"
            android:drawableStart="@drawable/settings_ic_color_lens_24dp"
            android:drawableLeft="@drawable/settings_ic_color_lens_24dp"
            android:text="@string/settings_color_change" />

        <TextView
            android:id="@+id/more_dark_theme"
            style="@style/MoreTextViewTheme"
            android:drawableStart="@drawable/settings_ic_invert_colors_24dp"
            android:drawableLeft="@drawable/settings_ic_invert_colors_24dp"
            android:text="@string/more_dark_theme" />

        <TextView
            android:id="@+id/more_update_frequency"
            style="@style/MoreTextViewTheme"
            android:drawableStart="@drawable/more_ic_update_24dp"
            android:drawableLeft="@drawable/more_ic_update_24dp"
            android:text="@string/more_update_frequency" />


    </LinearLayout>

</ScrollView>